[project]
name = "jaxonagents"
version = "0.1.0"
description = "JAX RL Agents"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Artur A. Galstyan", email = "mail@arturgalstyan.dev" }]
dependencies = [
    "jax",
    "equinox",
    "numpy",
    "jaxtyping",
    "jaxonmodels",
    "beartype",
    "typing_extensions",
    "gymnasium",
    "optax>=0.2.4",
]
[project.optional-dependencies]
dev = ["pre-commit", "pytest", "mkdocs"]

[tool.ruff]
extend-include = ["*.ipynb"]
src = []

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.pyright]
include = ["src", "tests"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
